spacing and updated default building to be empty + updateInfo function to fix issue with the same years/chapel & shiley

--- a/initialApp/public/stylesheets/style.css
+++ b/initialApp/public/stylesheets/style.css
@@ -283,6 +283,7 @@ h1 {
 .welcome-popup h1 {
     margin-top: 12px;
     font-size: 2rem;
+    margin: 2px;
 }
 
 .close-popup {
